svc1/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-1-deployment
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: shafikur/backend-one:3.0
          ports:
            - containerPort: 80
