svc1/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fr.poridhi.io
  labels:
    app: frontend-svc
spec:
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
