svc1/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: frontend-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: fr.poridhi.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
    - host: api.poridhi.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-sv2-svc
                port:
                  number: 80
